src/index.css
@keyframes fadeIn {
  from { opacity: 0; }
  to { opacity: 1; }
}

@media (prefers-color-scheme: dark) { 
  body {
    color: white;
    background-color: black;
  }
}

.levels, .display, .How2Play {
  animation-name: fadeIn;
  animation-duration: 2s;
}

body {
  animation-name: fadeIn;
  animation-duration: 2s;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@media only screen and (min-width: 0px) {
  .App .container, .display .container, .How2Play .container {
    display: flex;
    display: -moz-flex;
    display: -webkit-flex;  
    flex-wrap: wrap;
    height: 100vh;
    -webkit-justify-content: center;
    -moz-justify-content: center;
    justify-content: center;
    -webkit-align-content: center;
    align-content: center;
  } 
}

button {
  border-radius: 5px;
}

